FIx mobile social icons wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -3315,7 +3315,6 @@ img.u-pull-left {
 
   .intro-social {
     width: 100%;
-    flex-wrap: wrap;
     padding-left: 0;
     padding-right: 8rem;
     transform: none;
